финальные изменения v3
