# docs/swagger.json
@@ -305,6 +305,20 @@
                 }
             }
         },
+        "model.GetResp": {
+            "type": "object",
+            "properties": {
+                "cars": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.Car"
+                    }
+                },
+                "totalAmount": {
+                    "type": "integer"
+                }
+            }
+        },
         "model.RegNums": {
             "type": "object",
             "properties": {
